<resources>
    <string name="app_name">Alodokter by Kelompok 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onborading_1">onBorading 1</string>
    <string name="mulai">Mulai</string>
    <string name="konsultasi_dengan_dokter">Konsultasi dengan dokter</string>
    <string name="onboardDescText">Sekarang kamu bisa konsultasi dengan dokter melalui chat, telfon atau video call dalam 1 menit</string>
    <string name="temukan_infromasi_kesehatan_terpercaya">Temukan infromasi kesehatan terpercaya</string>
    <string name="onBoard2Desc">Kamu akan mendapatkan informasi terpercaya dari dokter terbaik di Indonesia</string>
    <string name="onboarding_2">onBoarding 2</string>
    <string name="email">Email</string>
    <string name="login">Masuk</string>
    <string name="password">Password</string>
    <string name="logo_app">logo app</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="tidak_punya_akun_buat_disini">Tidak punya akun? Buat disini</string>
    <string name="official_partner">Official partner</string>
    <string name="logo_kemkes">logo kemkes</string>
    <string name="buat_akun">Buat akun</string>
    <string name="nama">Nama</string>
    <string name="ulangi_password">Ulangi password</string>
    <string name="label_home">Home</string>
    <string name="label_services">Services</string>
    <string name="label_articles">Articles</string>
    <string name="label_messages">Messages</string>
    <string name="label_foto_profil">Photo Profile</string>
    <string name="content_desc_button_search">Button Search</string>
    <string name="label_emergency_consult">Emergency consult with your recommended doctor</string>
    <string name="label_top_articles">Top Articles</string>
    <string name="label_see_all">See All</string>
    <string name="label_find_your_services">Find Your Services</string>
    <string name="label_psychologist">Psychologist</string>
    <string name="content_desc_button_psychologist">Button Psychologist</string>
    <string name="content_desc_button_opthalmologist">Button Opthalmologist</string>
    <string name="content_desc_button_dentists">Button Dentists</string>
    <string name="content_desc_button_cardiologist">Button Cardiologist</string>
    <string name="label_dr_mark_noble">Dr. Mark Noble</string>
    <string name="label_tgl_publish">20 Nov 2021</string>
    <string name="label_title_article">How Sunlight, the Immune System, and Covid-19 Interact</string>
    <string name="content_desc_image_article">Image Article</string>
    <string name="label_rizqan_mubarak">Rizqan Mubarak</string>
    <string name="label_hello">Hello</string>
    <string name="label_profile">Profile</string>
    <string name="label_payment_methods">Payment Methods</string>
    <string name="label_saved">Saved</string>
    <string name="label_appointment_date">Appointment date</string>
    <string name="label_logout">Logout</string>
    <string name="label_open">Open</string>
    <string name="label_close">Close</string>
    <string name="label_service_fragment">Hello Service Fragment</string>
    <string name="label_search">Search</string>
    <string name="lewatkan">Lewatkan</string>
    <string name="helperNotBlank">Tidak boleh kosong</string>
    <string name="helperEmail">Masukan email yang sah</string>
    <string name="password_not_valid">Minimal password 8 karakter</string>
    <string name="minLeng8">Minimal 8 karakter</string>
    <string name="minLeng4">Minimal 4 karakter</string>
    <string name="minLeng12">Minimal 12 karakter</string>
    <string name="password_not_same">Password tidak sesuai</string>
    <string name="username">Username</string>
    <string name="perempuan">Perempuan</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="nomor_telpon">Nomor telpon</string>
    <string name="pilih_tanggal_lahir">Pilih tanggal lahir</string>
    <string name="icondate">iconDate</string>
    <string name="masukan_email_mu_yang_terdaftar">Masukan email mu yang terdaftar</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="masukan_kode_yang_telah_kami_kirim_ke_email_mu">Masukan kode yang telah kami kirim ke email mu</string>
    <string name="kode">Kode</string>
    <string name="password_berhasil_diubah">Password berhasil diubah</string>
    <string name="label_desc_article">For thousands of years, humans have recognized that the sun plays a role in the emergence and …</string>
    <string name="content_desc_image_doctor">Image Doctor</string>
    <string name="label_dokter_kulit">Dokter Kulit</string>
    <string name="lewatkan">Lewatkan</string>
    <string name="helperNotBlank">Tidak boleh kosong</string>
    <string name="helperEmail">Masukan email yang sah</string>
    <string name="password_not_valid">Minimal password 8 karakter</string>
    <string name="minLeng8">Minimal 8 karakter</string>
    <string name="minLeng4">Minimal 4 karakter</string>
    <string name="minLeng12">Minimal 12 karakter</string>
    <string name="password_not_same">Password tidak sesuai</string>
    <string name="username">Username</string>
    <string name="perempuan">Perempuan</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="nomor_telpon">Nomor telpon</string>
    <string name="pilih_tanggal_lahir">Pilih tanggal lahir</string>
    <string name="icondate">iconDate</string>
    <string name="masukan_email_mu_yang_terdaftar">Masukan email mu yang terdaftar</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="masukan_kode_yang_telah_kami_kirim_ke_email_mu">Masukan kode yang telah kami kirim ke email mu</string>
    <string name="kode">Kode</string>
    <string name="password_berhasil_diubah">Password berhasil diubah</string>
    <string name="selamatdatang">Selamat datang %1$s</string>
    <string name="content_desc_total_liked">Total Liked</string>
    <string name="label_liked_count">10.4k</string>
    <string name="label_comments_count">45 comments</string>
    <string name="label_detail_article">Detail Article</string>
    <string name="label_share">Share</string>
    <string name="label_save">Save</string>
    <string name="label_search_hint">Search something</string>
    <string name="label_hasil_pencarian_untuk">Hasil pencarian untuk</string>
    <string name="string_hasil_pencarian">Hasil pencarian untuk: %s</string>
    <string name="label_dokter">Dokter</string>
</resources>