<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:title="@string/label_home"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/nav_service"
        android:enabled="true"
        android:title="@string/label_dokter"
        android:icon="@drawable/ic_service"/>
    <item
        android:id="@+id/nav_article"
        android:enabled="true"
        android:title="@string/label_articles"
        android:icon="@drawable/ic_article"/>
<!--    <item-->
<!--        android:id="@+id/nav_messages"-->
<!--        android:enabled="true"-->
<!--        android:title="@string/label_messages"-->
<!--        android:icon="@drawable/ic_message_text"/>-->
</menu>