<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.nextint.alodokterbykelompok2.ui.homepage.HomeFragment"
        android:label="@string/label_home"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="ShowAppBar"
            android:defaultValue="true" />
        <action
            android:id="@+id/action_home_to_nav_service"
            app:destination="@id/nav_service"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim" />
        <action
            android:id="@+id/action_nav_home_to_nav_article"
            app:destination="@id/nav_article"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim" />
        <action
            android:id="@+id/action_nav_home_to_nav_profile"
            app:destination="@id/nav_profile" />
        <action
            android:id="@+id/action_nav_home_to_nav_appointment"
            app:destination="@id/nav_appointment" />
        <action
            android:id="@+id/action_nav_home_to_nav_payment_method"
            app:destination="@id/nav_payment_method" />
        <action
            android:id="@+id/action_nav_home_to_nav_detail_article"
            app:destination="@id/nav_detail_article">
            <argument
                android:name="id_article"
                app:argType="string" />
        </action>
        <action
            android:id="@+id/action_nav_home_to_nav_search"
            app:destination="@id/nav_search"
            app:enterAnim="@animator/nav_default_enter_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.nextint.alodokterbykelompok2.ui.profile.ProfileFragment"
        android:label="@string/label_profile"
        tools:layout="@layout/fragment_profile">
        <argument
            android:name="ShowAppBar"
            android:defaultValue="false" />
    </fragment>

    <fragment
        android:id="@+id/nav_payment_method"
        android:name="com.nextint.alodokterbykelompok2.ui.paymentmethod.PaymentMethodFragment"
        android:label="@string/label_payment_methods"
        tools:layout="@layout/fragment_payment_method">
        <argument
            android:name="ShowAppBar"
            android:defaultValue="false" />
    </fragment>

    <fragment
        android:id="@+id/nav_appointment"
        android:name="com.nextint.alodokterbykelompok2.ui.appointment.AppointmentFragment"
        android:label="@string/label_appointment_date"
        tools:layout="@layout/fragment_appointment">
        <argument
            android:name="ShowAppBar"
            android:defaultValue="false" />
    </fragment>

    <fragment
        android:id="@+id/nav_service"
        android:name="com.nextint.alodokterbykelompok2.ui.service.ServiceFragment"
        android:label="@string/label_services"
        tools:layout="@layout/fragment_service">
        <argument
            android:name="ShowAppBar"
            android:defaultValue="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_article"
        android:name="com.nextint.alodokterbykelompok2.ui.article.ArticleFragment"
        android:label="@string/label_articles"
        tools:layout="@layout/fragment_article">
        <argument
            android:name="ShowAppBar"
            android:defaultValue="true" />
        <action
            android:id="@+id/action_nav_article_to_nav_detail_article"
            app:destination="@id/nav_detail_article" />
    </fragment>

    <fragment
        android:id="@+id/nav_detail_article"
        android:name="com.nextint.alodokterbykelompok2.ui.article.DetailArticleFragment"
        android:label="@string/label_detail_article"
        tools:layout="@layout/fragment_detail_article">
        <argument
            android:name="ShowAppBar"
            android:defaultValue="false" />
    </fragment>

    <fragment
        android:id="@+id/nav_search"
        android:name="com.nextint.alodokterbykelompok2.ui.search.SearchFragment"
        android:label=""
        tools:layout="@layout/fragment_search">
        <argument
            android:name="ShowAppBar"
            android:defaultValue="false" />
        <action
            android:id="@+id/action_nav_search_to_nav_detail_article"
            app:destination="@id/nav_detail_article">
            <argument
                android:name="id_article"
                app:argType="string" />
        </action>
    </fragment>

</navigation>