<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin16"
    android:scrollbars="none"
    tools:context=".ui.createaccount.CreateAccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            style="@style/textFieldLayout"
            android:layout_marginTop="@dimen/margin24"
            android:hint="@string/nama"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edit_text"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_username"
            style="@style/textFieldLayout"
            android:layout_marginTop="@dimen/margin24"
            android:hint="@string/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edit_text"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>


        <RadioGroup
            android:id="@+id/genderRb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin8"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGender">

            <RadioButton
                android:id="@+id/radio_perempuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perempuan" />

            <RadioButton
                android:id="@+id/radio_lakilaki"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/laki_laki" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvDob"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin24"
            android:text="@string/tanggal_lahir"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genderRb" />

        <TextView
            android:id="@+id/tvDobValue"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin8"
            android:text="@string/pilih_tanggal_lahir"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDob" />

        <ImageButton
            android:id="@+id/btnDob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin24"
            android:contentDescription="@string/icondate"
            android:onClick="showDatePicker"
            android:src="@drawable/ic_baseline_calendar_month_24"
            app:layout_constraintBottom_toBottomOf="@+id/tvDobValue"
            app:layout_constraintStart_toEndOf="@id/tvDobValue"
            app:layout_constraintTop_toBottomOf="@+id/tvDob" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/textFieldLayout"
            android:layout_marginTop="@dimen/margin24"
            android:hint="@string/email"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDobValue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edit_text"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_notelp"
            style="@style/textFieldLayout"
            android:layout_marginTop="@dimen/margin24"
            android:hint="@string/nomor_telpon"
            app:layout_constraintBottom_toTopOf="@id/til_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_notelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edit_text"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/textFieldLayout"
            android:layout_marginTop="@dimen/margin16"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_notelp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edit_text"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_retypePassword"
            style="@style/textFieldLayout"
            android:layout_marginTop="@dimen/margin16"
            android:hint="@string/ulangi_password"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_retypePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edit_text"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_app"
            android:src="@drawable/ic_logo_splash"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16"
            android:text="@string/buat_akun"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateAccount"
            style="@style/primaryButton"
            android:layout_marginTop="@dimen/margin24"
            android:backgroundTint="@color/gsText"
            android:enabled="false"
            android:text="@string/buat_akun"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_retypePassword" />

        <TextView
            android:id="@+id/tvLogin"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16"
            android:text="@string/login"
            android:textColor="@color/secondary"
            app:layout_constraintEnd_toEndOf="@+id/btnCreateAccount"
            app:layout_constraintStart_toStartOf="@+id/btnCreateAccount"
            app:layout_constraintTop_toBottomOf="@+id/btnCreateAccount" />

        <TextView
            android:id="@+id/textView4"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin40"
            android:layout_marginBottom="@dimen/margin8"
            android:text="@string/official_partner"
            android:textColor="@color/gsText"
            app:layout_constraintBottom_toTopOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@id/tvLogin" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_kemkes"
            android:src="@drawable/kemkes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvGender"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin24"
            android:text="Jenis kelamin"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_username" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>