<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/spacing_60"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingVertical="@dimen/spacing_6"
    android:layout_marginEnd="@dimen/spacing_6"
    android:gravity="center_horizontal">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="@dimen/spacing_60"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/spacing_130"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/ivTopDoctor"
            android:layout_width="@dimen/spacing_60"
            android:layout_height="@dimen/spacing_60"
            android:adjustViewBounds="true"
            android:src="@drawable/image_doctor"
            android:scaleType="centerCrop"
            android:contentDescription="@string/content_desc_image_doctor"/>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvDoctorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_6"
        android:textAlignment="center"
        android:lines="1"
        android:fontFamily="@font/plus_jakarta_text_regular"
        android:text="@string/label_dr_mark_noble"
        android:textSize="@dimen/font_10"/>

    <TextView
        android:id="@+id/tvDoctorSpecialist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/plus_jakarta_text_light"
        android:text="@string/label_dokter_kulit"
        android:textSize="@dimen/font_9"/>

</LinearLayout>